<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="com.example.paul.barcode.newproduct">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/code"
              />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textCapSentences"
              android:id="@+id/txtcode"/>
          <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/productname"
          />
      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textCapSentences"
          android:id="@+id/txtproductname"/>
          <!--public String Manufacturer;-->
          <!--public String source;-->
          <!--public Date ManufactureDateTime;-->
          <!--public Date ExpiryDateTime;-->
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/productsize"
              />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textCapSentences"
              android:id="@+id/txtproductsize"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/manufacturer"
              />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textCapSentences"
              android:id="@+id/txtmanufacturer"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/source"
              />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="textCapSentences"
              android:id="@+id/txtsource"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/mandate"
              />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="none"
              android:id="@+id/mandate"/>
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/exdate"
              />
          <EditText
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="none"
              android:id="@+id/Expirydate"
             />
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/testbarcode"/>
      </LinearLayout>
  </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:id="@+id/save"/>
    </LinearLayout>
</RelativeLayout>
